<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="@string/def_theme"
        android:dialogTitle="@string/theme_dialog_title"
        android:entries="@array/themes"
        android:entryValues="@array/themes"
        android:key="theme"
        android:summary="@string/theme_summary"
        android:title="@string/theme_dialog_title" />
    <ListPreference
        android:defaultValue="@string/def_text_size"
        android:dialogTitle="@string/text_size_dialog_title"
        android:entries="@array/text_sizes"
        android:entryValues="@array/text_sizes"
        android:key="textSize"
        android:summary="@string/text_size_summary"
        android:title="@string/text_size_dialog_title" />
</PreferenceScreen>